<resources>
    <string name="app_name">mehrabi-task-java-view-based</string>
    <string name="registration_title">Create Account</string>
    <string name="details">Please complete all the information below to create your account.</string>
    <string name="email">Email</string>
    <string name="email_label">Email</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="button_txt">Register</string>
    <string name="result_screen_title">List of users</string>
    <string name="no_users_text">There is no users registered.</string>
    <string name="time_txt">Time</string>
</resources>