<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    app:cardBackgroundColor="@color/md_theme_secondaryContainer"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_fullname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/full_name"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/email"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp" />

        <TextView
            android:id="@+id/txt_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/password"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp" />

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/time_txt"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />


    </LinearLayout>

</androidx.cardview.widget.CardView>